# lepto-inst

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: LeptoInst.hpp  LeptoInstVisitor.hpp
src/: CMakeLists.txt  LeptoInst.cpp  LeptoInstVisitor.cpp  Pass.cpp
test/: Makefile  primes.cpp
